--- a/yelp_nebulagraph_importer.yaml
+++ b/yelp_nebulagraph_importer.yaml
@@ -4,7 +4,7 @@ description: nebulagraph-yelp importer config file
 removeTempFiles: false
 clientSettings:
   retry: 6
-  concurrency: 1 # number of graph clients
+  concurrency: 6 # number of graph clients
   channelBufferSize: 16
   space: yelp
   connection:
@@ -28,8 +28,8 @@ logPath: ./err/importer.log
 files:
 
   - path: ./net_rur.csv
-    failDataPath: ./err/net_rur.csv.fail
-    batchSize: 64
+    failDataPath: ./err/
+    batchSize: 512
     inOrder: true
     type: csv
     csv:
@@ -49,8 +49,8 @@ files:
           type: int
 
   - path: ./net_rsr.csv
-    failDataPath: ./err/net_rsr.csv.fail
-    batchSize: 64
+    failDataPath: ./err/
+    batchSize: 512
     inOrder: true
     type: csv
     csv:
@@ -70,8 +70,8 @@ files:
           type: int
 
   - path: ./net_rtr.csv
-    failDataPath: ./err/net_rtr.csv.fail
-    batchSize: 64
+    failDataPath: ./err/
+    batchSize: 512
     inOrder: true
     type: csv
     csv:
@@ -91,8 +91,8 @@ files:
           type: int
 
   - path: ./vertices.csv
-    failDataPath: ./err/vertices.csv.fail
-    batchSize: 128
+    failDataPath: ./err/
+    batchSize: 64
     inOrder: true
     type: csv
     csv:
